Add core index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 	<header>
 		<title>
-			S01
+			Initial page
 		</title>
 	</header>
 	<body>
-		<a href="hello.html">Hello there!</a>
+		<a href="README.md">README</a>
 		<br>
-		<a href="try.html">Try me!</a>
+		<a href="work/s01/">S01</a>
 	</body>
 </html>
