Fix formatting and add report.html
Use WebStorm's auto formatting tool to keep html code clean. Add first week's report as a html document.

--- a/work/s01/index.html
+++ b/work/s01/index.html
@@ -1,12 +1,14 @@
 <html>
-	<header>
-		<title>
-			S01
-		</title>
-	</header>
-	<body>
-		<a href="hello.html">Hello there!</a>
-		<br>
-		<a href="try.html">Try me!</a>
-	</body>
+<header>
+    <title>
+        S01
+    </title>
+</header>
+<body>
+<a href="report.html">Week's report</a>
+<br>
+<a href="try.html">Try me!</a>
+<br>
+<a href="hello.html">Hello there!</a>
+</body>
 </html>
