--- a/work/so1/index.html
+++ b/work/so1/index.html
@@ -8,6 +8,6 @@
     />
     <meta name="theme-color" content="#000000" />
     <body>
-        <div>its a index page</div>
+        <div>its a index page that is a silly page</div>
         
     </body>
