--- a/work/s01/report.html
+++ b/work/s01/report.html
@@ -9,31 +9,32 @@
 <b>Did you before know about the techniques Git, GitHub, Markdown and/or GitHub Pages?</b>
 <p>
     Git and GitHub is something we have worked with many times before, starting from the first year. Overall I feel like
-    I got the basics of it down, and I would be comfortable with doing anything this course requires me to do using
-    those technologies.
+    I got the basics of it down. I would most likely be comfortable with doing most of what this course requires me to
+    do using those technologies.
     <br>
     Markdown however is something that I have never used before and is therefore a whole new concept for me. I am not
     familiar with what is possible to be done with it nor am I familiar with the syntax of it.
     <br>
-    GitHub pages is also a new concept for me, but it turned out to be fairly straightforward to setup which was a
+    GitHub pages is also a new concept for me. Luckily, it turned out to be fairly straightforward to setup which was a
     pleasant surprise.
 </p>
 <b>Have you ever created websites before?</b>
 <p>
-    No, I have zero experience in creating websites. None of the courses we have taken so far required us to do so
-    and I have never had a personal interest for such a thing.
+    No, I have zero experience in creating websites. None of the courses we have taken so far required us to do so,
+    until now. I have never had a personal interest for such a thing due to being more interested in other topics
+    instead.
 </p>
 <b>Briefly explain your experience and knowledge of web application development.</b>
 <p>
     No experience with it whatsoever. I only understand the very basics of it and I have never tried to learn more
-    myself. This is going to be the first time ever venturing into this field and I hope it can be interesting and not
-    as tedious as many people that I have talked to about it have made it seem like.
+    myself. This is going to be the first time ever venturing into this field. I hope it can be interesting and not as
+    tedious as many people that I have talked to about it have made it seem like.
 </p>
 <b>What is your TIL for this course section?</b>
 <p>
     I have learned how links work and how we can jump from one html file to another. I have also learned about how
-    GitHub pages make it easy to launch a simple website out there without having to do anything else about it which
-    honestly seems pretty cool as well.
+    GitHub pages work. They make it so easy to launch a simple website out there without having to do anything else
+    about it which honestly seems pretty cool as well.
 </p>
 <a href="index.html">Back to S01</a>
 </body>
