--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
+<head>
+    <meta charset="utf-8">
+    <title>Initial page</title>
+    <link rel="stylesheet" href="work/css/style.css">
+    <link rel="icon" href="work/report/img/me_icon.png">
+</head>
 <header>
-    <title>
-        Initial page
-    </title>
+    <nav>
+        <a href="work/report/me.html">Me</a> |
+        <a href="work/report/about.html">About</a> |
+        <a href="work/s01/">S01</a>
+        <a href="work/s02/">S02</a>
+    </nav>
 </header>
-<body>
-<a href="README.md">README</a>
-<br>
-<a href="work/s01/">S01</a>
-</body>
 </html>
