--- a/work/s01/hello.html
+++ b/work/s01/hello.html
@@ -1,9 +1,10 @@
 <html>
-<header>
-    <title>
-        Title
-    </title>
-</header>
+<head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../report/img/me_icon.png">
+</head>
 <body>
 Hello world
 </body>
