--- a/work/s01/index.html
+++ b/work/s01/index.html
@@ -1,14 +1,15 @@
 <html>
+<head>
+    <meta charset="utf-8">
+    <title>S01</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../report/img/me_icon.png">
+</head>
 <header>
-    <title>
-        S01
-    </title>
+    <nav>
+        <a href="../report/report.html">Report</a> |
+        <a href="try.html">Try me!</a> |
+        <a href="hello.html">Hello there!</a>
+    </nav>
 </header>
-<body>
-<a href="report.html">Week's report</a>
-<br>
-<a href="try.html">Try me!</a>
-<br>
-<a href="hello.html">Hello there!</a>
-</body>
 </html>
