--- a/work/s02/index.html
+++ b/work/s02/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Try</title>
+    <title>S01</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../report/img/me_icon.png">
 </head>
-<body>
-Try me
-</body>
+<header>
+    <nav>
+        <a href="../report/report.html">Report</a>
+    </nav>
+</header>
 </html>
