--- a/example/report/report.html
+++ b/example/report/report.html
@@ -79,7 +79,7 @@
 
 <footer>
     <hr>
-    <p>Provide a nice footer to your report.</p>
+    <p>Provide a nice footer to to this page</p>
 </footer>
 
 </article>
