--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <head>
     <meta charset="utf-8">
     <title>Initial page</title>
-    <link rel="stylesheet" href="work/css/style.css">
-    <link rel="icon" href="work/report/img/me_icon.png">
+    <link rel="stylesheet" href="work/report/style.css">
+    <link rel="icon" href="work/report/me_icon.png">
 </head>
 <header>
     <nav>
-        <a href="work/report/me.html">Me</a> |
-        <a href="work/report/about.html">About</a> |
-        <a href="work/s01/">S01</a>
-        <a href="work/s02/">S02</a>
+        <a href="work/report/me/me.html">Me</a> |
+        <a href="work/report/about/about.html">About</a> |
+        <a href="work/s01/">S01</a> |
+        <a href="work/s02/">S02</a> |
+        <a href="work/s03/a03">S03</a>
     </nav>
 </header>
 </html>
