--- a/work/report/me/me.html
+++ b/work/report/me/me.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Presentation of my self in the course DA377B</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../report/img/me_icon.png">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style/pp.css">
+    <link rel="icon" href="../me_icon.png">
 </head>
 <body>
 <header>
-    <nav>
-        <a href="me.html">Me</a> |
-        <a href="report.html">Report</a> |
-        <a href="about.html">About</a>
-    </nav>
+    <script src="../header.js"></script>
 </header>
 <article>
     <h1>My report page in the course XXX</h1>
@@ -37,7 +34,7 @@
 <footer>
     <hr>
     <p>A nice footer to to this page</p>
+    <img src="../nice_footer.jpg" height="100" width="700"/>
 </footer>
-<img src="img/nice_footer.jpg" height="100" width="700"/>
 </body>
 </html>
