--- a/work/report/report/report.html
+++ b/work/report/report/report.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Report from the course sections</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../report/img/me_icon.png">
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../me_icon.png">
 </head>
 <body>
 <header>
-    <nav>
-        <a href="me.html">Me</a> |
-        <a href="report.html">Report</a> |
-        <a href="about.html">About</a>
-    </nav>
+    <script src="../header.js"></script>
 </header>
 <article>
     <header>
@@ -22,32 +17,42 @@
     <section>
         <h2>S01</h2>
         <p>
-            Git and GitHub is something we have worked with many times before, starting from the first year. Overall I feel like
-            I got the basics of it down. I would most likely be comfortable with doing most of what this course requires me to
+            Git and GitHub is something we have worked with many times before, starting from the first year. Overall I
+            feel like
+            I got the basics of it down. I would most likely be comfortable with doing most of what this course requires
+            me to
             do using those technologies.
             <br>
-            Markdown however is something that I have never used before and is therefore a whole new concept for me. I am not
+            Markdown however is something that I have never used before and is therefore a whole new concept for me. I
+            am not
             familiar with what is possible to be done with it nor am I familiar with the syntax of it.
             <br>
-            GitHub pages is also a new concept for me. Luckily, it turned out to be fairly straightforward to setup which was a
+            GitHub pages is also a new concept for me. Luckily, it turned out to be fairly straightforward to setup
+            which was a
             pleasant surprise.
         </p>
         <b>Have you ever created websites before?</b>
         <p>
-            No, I have zero experience in creating websites. None of the courses we have taken so far required us to do so,
-            until now. I have never had a personal interest for such a thing due to being more interested in other topics
+            No, I have zero experience in creating websites. None of the courses we have taken so far required us to do
+            so,
+            until now. I have never had a personal interest for such a thing due to being more interested in other
+            topics
             instead.
         </p>
         <b>Briefly explain your experience and knowledge of web application development.</b>
         <p>
-            No experience with it whatsoever. I only understand the very basics of it and I have never tried to learn more
-            myself. This is going to be the first time ever venturing into this field. I hope it can be interesting and not as
+            No experience with it whatsoever. I only understand the very basics of it and I have never tried to learn
+            more
+            myself. This is going to be the first time ever venturing into this field. I hope it can be interesting and
+            not as
             tedious as many people that I have talked to about it have made it seem like.
         </p>
         <b>What is your TIL for this course section?</b>
         <p>
-            I have learned how links work and how we can jump from one html file to another. I have also learned about how
-            GitHub pages work. They make it so easy to launch a simple website out there without having to do anything else
+            I have learned how links work and how we can jump from one html file to another. I have also learned about
+            how
+            GitHub pages work. They make it so easy to launch a simple website out there without having to do anything
+            else
             about it which honestly seems pretty cool as well.
         </p>
     </section>
@@ -93,7 +98,14 @@
     </section>
     <section>
         <h2>S03</h2>
-        <p>Here is the text for this section.</p>
+        <b>Do you have any previous experience of client side JavaScript?</b>
+        <p></p>
+        <b>Can you compare and relate the JavaScript language to any other language you know?</b>
+        <p></p>
+        <b>Describe how you worked with the coding exercise, what grade do you aim for and how did your code turn out to
+            be?</b>
+        <p></p>
+        <b>What is your TIL for this course section?</b>
     </section>
     <section>
         <h2>S04</h2>
@@ -125,9 +137,9 @@
     </section>
     <footer>
         <hr>
-        <p>Provide a nice footer to your report.</p>
+        <p>A nice footer to to this page</p>
+        <img src="../nice_footer.jpg" height="100" width="700"/>
     </footer>
 </article>
-<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
