--- a/work/s01/hello.html
+++ b/work/s01/hello.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="utf-8">
     <title>Hello</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../report/img/me_icon.png">
+    <link rel="stylesheet" href="../report/style.css">
+    <link rel="icon" href="../report/me_icon.png">
 </head>
 <body>
 Hello world
