--- a/work/s01/index.html
+++ b/work/s01/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="utf-8">
     <title>S01</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../report/img/me_icon.png">
+    <link rel="stylesheet" href="../report/style.css">
+    <link rel="icon" href="../report/me_icon.png">
 </head>
 <header>
     <nav>
-        <a href="../report/report.html">Report</a> |
+        <a href="../report/report/report.html">Report</a> |
         <a href="try.html">Try me!</a> |
         <a href="hello.html">Hello there!</a>
     </nav>
