Change API calls to allow CORS
Change the API called to one that does allow CORS
There is much less data this way, but showcases the ability to do online API calls instead

--- a/work/s04/a04/public/report/schools/schools.html
+++ b/work/s04/a04/public/report/schools/schools.html
@@ -13,11 +13,12 @@
 </header>
 <body>
 <h1>My Mega Sandbox</h1>
+<h6>Turned into a person search because of the CORS problem</h6>
 <div>
     <form id="schoolForm">
-        <label for="schoolOptions">Select the region you are interested in</label>
+        <label for="schoolOptions">Select person</label>
         <select id="schoolOptions"></select>
-        <input type="submit" value="Fetch schools">
+        <input type="submit" value="Fetch data">
     </form>
 </div>
 <div id="content">
