added the text for the report for s02

--- a/work/report/report.html
+++ b/work/report/report.html
@@ -47,7 +47,11 @@
 
 <section>
 <h2>S02</h2>
-<p>H</p>
+<p>Do I have any previous experience with html/css/js - Not much, some basic html and css in a komvux course I took! 
+   What role does Html/css/js have - Html is like the frame of a house, Css is like the painting and furnishing and JS is that the fan turns on when you press the power button! 
+   browser-http-webserver interaction - The browser takes a url then sends a http request to the server to obtain the required data for that specific url then returns that information back to the browser to be rendered or updated, not sure how indepth you want to me to go about protocols, handshakes, and so on.  
+   My TIL - Html, css and js can work together to make some wonderfully functional and visually appealing web sits and web apps.  
+</p>
 </section>
 
 <section>
