added some css for the table, got the table working and connected the index with the other about pages

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
     <meta name="theme-color" content="#000000" />
     <body>
         <div>its a index page yep yep </div>
-        <a href="https://john-daley.github.io/websoft/work/so1/Hello.html"> hello page </a>
+        <a href="https://john-daley.github.io/websoft/work/so1/Hello.html"> 1. Hello &nbsp </a>
         
         <a href="https://john-daley.github.io/websoft/work/so1/try.html">
-        this is the page where we try things
+        2. this is the page where we try things &nbsp
         </a>
+        <a href="https://john-daley.github.io/websoft/work/report/schools.html">
+          3. Schools &nbsp
+          </a>
+          <a href="https://john-daley.github.io/websoft/work/report/about.html">
+            4. About &nbsp
+            </a>
+            <a href="https://john-daley.github.io/websoft/work/report/me.html">
+              3. My info &nbsp
+              </a>
+              <a href="https://john-daley.github.io/websoft/work/report/report.html">
+                3. My Report &nbsp
+                </a>
     </body>
