--- a/work/report/report.html
+++ b/work/report/report.html
@@ -56,7 +56,15 @@
 
 <section>
 <h2>S03</h2>
-<p>Here is the text for this section.</p>
+<p>I do have a little experience with client side but using react
+   I think working with JS, because its functional and interweaved with html/css is rather confusing some times. Compared
+   to java or kotlin, oop based languages. 
+   To work with this exercise I spent my time reading some tutorials and the lecture slides/resources. I had a lot of trouble because I 
+   didn't know we were allowed to fetch locally. So I ended up using the node function in the terminal to download and save the file, the code is in the schools.html file, then loading the file using jquery. 
+   Its good because I was forced to learn a lot about cors errors for the future XD 
+   The duck is based off of the JS duck hunt game you showed as an example. 
+   I want to get grade 3. My code is a mess and I will refactor and clean up the code and styling in the future.  
+</p>
 </section>
 
 <section>
