--- a/work/report/schools.html
+++ b/work/report/schools.html
@@ -62,7 +62,8 @@ function tableBuilder(data){
 </script>
 
 <body id = "body">
-    <input type="button" onclick="tableBuilder()" value="Schools in Tibro !"/>
+  <div id="duck" class="duck"></div>
+  <input type="button" onclick="tableBuilder()" value="Schools in Tibro !"/>
     <p id="showschools"></p>
     <table id="table" >
       <thead class="thead">
@@ -74,7 +75,7 @@ function tableBuilder(data){
         </tr>
     </thead>
     </table>
-
+    <script type="text/javascript" src="js/duck.js" ></script>
 </body>
 
 </html>
